# android_libsdl2

./: .gitignore  README.md  package_output.sh  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libsdl2/: build.gradle
libsdl2/src/androidTest/java/uk/co/tdpe/libsdl2/: ExampleInstrumentedTest.java
libsdl2/src/main/: AndroidManifest.xml
libsdl2/src/main/SDL2-2.0.12/: CMakeLists.txt
libsdl2/src/test/java/uk/co/tdpe/libsdl2/: ExampleUnitTest.java
libsdl2_image/: build.gradle
libsdl2_image/src/main/: AndroidManifest.xml
libsdl2_image/src/main/SDL2_image-2.0.5/: CMakeLists.txt
